# spbot_project

./: README.md
spbot_description/: CMakeLists.txt  package.xml
spbot_description/config/move_base/costmap/: costmap_common_params.yaml  costmap_common_params_rtabmap.yaml  global_costmap_params.yaml  global_costmap_params_rtabmap.yaml  local_costmap_params.yaml  local_costmap_params_rtabmap.yaml
spbot_description/include/: spbot.yaml
spbot_description/launch/: amcl.launch  move_base.launch  move_base_rtabmap.launch  spbot.launch  teleop.launch
spbot_description/map/: my_map.yaml
spbot_description/meshes/: free_wheel.dae
spbot_description/msg/: elevator.msg
spbot_description/spbot_training/: CMakeLists.txt  package.xml
spbot_description/spbot_training/config/: spbot_openai_qlearn_params.yaml  spbot_openai_qlearn_params_v2.yaml
spbot_description/spbot_training/launch/: start_training.launch  start_training_v2.launch
spbot_description/spbot_training/robot_envs/: spbot_env.py
spbot_description/spbot_training/src/: qlearn.py  start_training.py  start_training_v2.py
spbot_description/src/: ElevatorPluginPrivate.hh  elevator_plugin.cc  move_base_simple_navigation.cpp  sim_pose_publisher.cpp
spbot_description/src/elevator_model_plugin/: CMakeLists.txt  package.xml
spbot_description/src/elevator_model_plugin/src/: ElevatorPlugin.cc  ElevatorPlugin.hh  ElevatorPluginPrivate.hh  button.cc
spbot_description/srv/: GoToFloor.srv  SetDoorState.srv  SetElevatorControl.srv
spbot_description/urdf/: hokuyo.macro.xacro  spbot.sdf  spbot.urdf  spbot.urdf.xacro
(+6 files in other folders)
